fix header list overflow

--- a/source/less/components/header.less
+++ b/source/less/components/header.less
@@ -179,22 +179,24 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
     grid-column: 1/2;
     background-color: transparent;
   }
 
   @media (min-width: @desktop-width) {
-    display: flex;
     margin-right: 20px;
   }
 }
 
 .main-nav__item {
-  @media (min-width: @desktop-width) {
-    height: 100%;
+  @media (min-width: @tablet-width) {
     display: flex;
     align-items: center;
+    height: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 88px;
 
     &:first-child {
       padding-right: 15px;
@@ -280,7 +282,7 @@
 
 .main-nav__user-item {
   @media (min-width: @tablet-width) {
-    height: 100%;
+    height: 88px;
     display: flex;
     align-items: center;
 
@@ -313,6 +315,7 @@
 
   @media (min-width: @tablet-width) {
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-end;
     align-items: center;
     grid-column: 2/3;
